# langchain-gaussdb

./: LICENSE  README.md  pyproject.toml
langchain_gaussdb/: __init__.py  config.py  gaussdb.py
tests/: test_gaussdb.py
