[project]
name = "langchain-gaussdb"
version = "0.1.0"
description = "An integration package connecting GaussDB and LangChain"
authors = [
    {name = "w00840157"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "psycopg[pool]>=3.3.0,<4.0.0",
    "pydantic (>=2.12.4,<3.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=9.0.1,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "langchain-openai (>=1.1.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
